--- a/Quote.html
+++ b/Quote.html
@@ -9,10 +9,12 @@
 <body>
     <div class="container">
         <h1>Daily Motivation Quotes</h1>
-        <div id="quote-box">
+        <div id="quote-box" class="fade-in">
             <p id="quote">Click the button to get a new quote!</p>
+            <p id="author"></p>
         </div>
         <button id="new-quote">New Quote</button>
+        <a id="tweet-quote" href="#" target="_blank">Tweet</a>
     </div>
     <script src="script.js"></script>
 </body>
